# rtcms4j-core-api/src/main/resources/static/openapi/core-api.yaml
@@ -1086,15 +1086,18 @@ paths:
           schema:
             type: integer
             format: int64
+        - name: pageable
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/Pageable'
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ConfigurationCommitDto'
+                $ref: '#/components/schemas/PagedModelConfigurationCommitDto'
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -1755,6 +1758,16 @@ components:
       description: Configuration json schema
       type: string
 
+    PagedModelConfigurationCommitDto:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/ConfigurationCommitDto'
+        page:
+          $ref: '#/components/schemas/PageMetadata'
+
     ConfigurationCommitDto:
       type: object
       required:
@@ -1762,6 +1775,7 @@ components:
         - applicationId
         - configurationId
         - commitId
+        - commitVersion
         - sourceType
         - sourceIdentity
       properties:
@@ -1777,6 +1791,8 @@ components:
         commitId:
           type: integer
           format: int64
+        commitVersion:
+          type: string
         sourceType:
           $ref: '#/components/schemas/SourceType'
         sourceIdentity:
