# rtcms4j-core-server/src/main/kotlin/ru/enzhine/rtcms4j/core/repository/db/ConfigCommitEntityRepositoryImpl.kt
@@ -1,5 +1,8 @@
 package ru.enzhine.rtcms4j.core.repository.db
 
+import org.springframework.data.domain.Page
+import org.springframework.data.domain.PageImpl
+import org.springframework.data.domain.Pageable
 import org.springframework.jdbc.core.RowMapper
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate
 import org.springframework.stereotype.Repository
@@ -22,6 +25,7 @@ class ConfigCommitEntityRepositoryImpl(
                     configurationId = rs.getLong("configuration_id"),
                     sourceType = SourceType.valueOf(rs.getString("source_type")),
                     sourceIdentity = rs.getString("source_identity"),
+                    version = rs.getString("version"),
                     jsonValues = rs.getString("json_values"),
                 )
             }
@@ -35,6 +39,7 @@ class ConfigCommitEntityRepositoryImpl(
                     configurationId = rs.getLong("configuration_id"),
                     sourceType = SourceType.valueOf(rs.getString("source_type")),
                     sourceIdentity = rs.getString("source_identity"),
+                    version = rs.getString("version"),
                 )
             }
     }
@@ -45,7 +50,7 @@ class ConfigCommitEntityRepositoryImpl(
                 """
                 insert into config_commit (config_schema_id, configuration_id, source_type, source_identity, json_values)
                 values (:config_schema_id, :configuration_id, :source_type, :source_identity, :json_values::jsonb)
-                returning *;
+                returning id, created_at, config_schema_id, configuration_id, source_type, source_identity, json_values, (json_values->>'version') as version;
                 """.trimIndent(),
                 mapOf(
                     "config_schema_id" to configCommitDetailedEntity.configSchemaId,
@@ -61,7 +66,7 @@ class ConfigCommitEntityRepositoryImpl(
         npJdbc
             .query(
                 """
-                select id, created_at, config_schema_id, configuration_id, source_type, source_identity, json_values from config_commit
+                select id, created_at, config_schema_id, configuration_id, source_type, source_identity, (json_values->>'version') as version from config_commit
                 where config_schema_id = :config_schema_id;
                 """.trimIndent(),
                 mapOf(
@@ -70,24 +75,60 @@ class ConfigCommitEntityRepositoryImpl(
                 ROW_MAPPER_PARTIAL,
             )
 
-    override fun findAllByConfigurationId(configurationId: Long): List<ConfigCommitEntity> =
-        npJdbc
-            .query(
-                """
-                select id, created_at, config_schema_id, configuration_id, source_type, source_identity, json_values from config_commit
-                where configuration_id = :configuration_id;
-                """.trimIndent(),
-                mapOf(
-                    "configuration_id" to configurationId,
-                ),
-                ROW_MAPPER_PARTIAL,
-            )
+    override fun findAllByConfigurationId(
+        configurationId: Long,
+        pageable: Pageable,
+    ): Page<ConfigCommitEntity> {
+        val total = countAllCommitsByConfigurationId(configurationId, pageable)
+        var content = emptyList<ConfigCommitEntity>()
+        if (total != 0L) {
+            content = findAllCommitsByConfigurationId(configurationId, pageable)
+        }
+
+        return PageImpl(content, pageable, total)
+    }
+
+    private fun findAllCommitsByConfigurationId(
+        configurationId: Long,
+        pageable: Pageable,
+    ): List<ConfigCommitEntity> =
+        npJdbc.query(
+            """
+            select id, created_at, config_schema_id, configuration_id, source_type, source_identity, (json_values->>'version') as version from config_commit
+            where configuration_id = :configuration_id
+            order by id desc
+            offset :offset limit :limit;
+            """.trimIndent(),
+            mapOf(
+                "configuration_id" to configurationId,
+                "offset" to pageable.offset,
+                "limit" to pageable.pageSize,
+            ),
+            ROW_MAPPER_PARTIAL,
+        )
+
+    private fun countAllCommitsByConfigurationId(
+        configurationId: Long,
+        pageable: Pageable,
+    ): Long =
+        npJdbc.queryForObject(
+            """
+            select count(*) from config_commit
+            where configuration_id = :configuration_id;
+            """.trimIndent(),
+            mapOf(
+                "configuration_id" to configurationId,
+                "offset" to pageable.offset,
+                "limit" to pageable.pageSize,
+            ),
+            Long::class.java,
+        ) ?: 0L
 
     override fun findById(id: Long): ConfigCommitDetailedEntity? =
         npJdbc
             .query(
                 """
-                select * from config_commit
+                select id, created_at, config_schema_id, configuration_id, source_type, source_identity, json_values, (json_values->>'version') as version from config_commit
                 where id = :id;
                 """.trimIndent(),
                 mapOf(
